--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   publish = "site"
   functions = "functions"
+
+  MY_API_URL_DEFAULT = "page=2"
+  MY_API_URL_DEFAULT = "https://reqres.in/api/users"
