--- a/functions/package.json
+++ b/functions/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "api.js",
+  "dependencies": {
+    "data-uri-to-buffer": "^4.0.0",
+    "fetch-blob": "^3.1.3",
+    "formdata-polyfill": "^4.0.10",
+    "node-fetch": "^2.3.0",
+    "web-streams-polyfill": "^3.2.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "node-fetch": "^3.1.0"
-  }
+  "license": "ISC"
 }
